[gd_scene load_steps=4 format=3 uid="uid://bou2wvyxh2s2l"]

[ext_resource type="Script" path="res://shop/shop.gd" id="1_talen"]
[ext_resource type="PackedScene" uid="uid://ciiib2lfqt7gd" path="res://shop/ui_shop_upgrade_item_offer_list.tscn" id="2_nqhl3"]
[ext_resource type="PackedScene" uid="uid://yw7ig7e0rsm8" path="res://shop/ui_shop_offer.tscn" id="3_eds27"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_talen")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_right = 87.5
offset_bottom = 58.0
grow_horizontal = 2
theme_type_variation = &"Label_L"
text = "The Shop"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIShopUpgradeItemOfferList" parent="CanvasLayer/CenterContainer" instance=ExtResource("2_nqhl3")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -64.0
offset_right = -21.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="UIShopOffer" parent="CanvasLayer/VBoxContainer" instance=ExtResource("3_eds27")]
layout_mode = 2

[node name="ButtonBack" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -66.0
offset_right = 103.0
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="CanvasLayer/ButtonBack" to="." method="_on_button_back_pressed"]
